# okular-pdfium-backend

./: CMakeLists.txt  README.md  document.cpp  document.h  generator_pdfium.cpp  generator_pdfium.h  libokularGenerator_pdfium.json  org.kde.okular-pdfium.metainfo.xml  page.cpp  page.h  pdfium_utils.cpp  pdfium_utils.h
